--- a/about.html
+++ b/about.html
@@ -3,28 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='/css/about.css'>
+    <link rel='stylesheet' href='/css/index.css'>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>About Us</title>
 </head>
-<body>
+<body id='aboutB'>
     <h1 id='about'>About Us</h1>
+    <section id='aboutUs'>
         <div id='pictures'>
             <div class='portraits'>
-                <img src='img/David.jpg'>
+                <img src='img/Idong Essien.jpg'>
             </div>
             <div class='portraits'>
-                <img src='img/Idong Essien.jpg'>
+                <img src='img/David.jpg'>
             </div>
             <div class='portraits'>
                 <img src='img/William.jpg'>
             </div> 
             <div class='portraits'>
+                <img src='img/lucas.jpg'>
+            </div>
+            <div class='portraits'>
                 <img src='img/Niko.jpg'>
             </div>
-        </div> 
-    <section id='aboutUs'>
-        <p>We are a group of software engineers dedicated to creating the most robust website and application for users to easily navigate and use. We are here to serve the community in any sort of way through developing a platform for all users to post their goods to sell as well as purchase them from any other posted goods. If you would like to reach out to us, you can contact us here:</p>
+            <div class='portraits'>
+                <img src='img/ESZCHB482-W012JQ3GX2P-67d1a47e091d-512.jpg'>
+            </div>
+        </div>
     </section>
+    <div id='text'>
+        <p>We are a group of software engineers dedicated to creating the most robust website and application for users to easily navigate and use. We are here to serve the community in any sort of way through developing a platform for all users to post their goods to sell as well as purchase them from any other posted goods. If you would like to reach out to us, you can contact us here:</p>
+        <p>https://www.linkedin.com/in/william-ryan-34a1981a1/<br>
+        https://www.linkedin.com/in/lucasgreenwell/<br>
+        https://www.linkedin.com/in/dortega5185/<br>
+        https://www.linkedin.com/in/nicholas-nobida-pedrano-2923321a8/<br>
+        https://www.linkedin.com/in/idongessien/</p>
+    </div> 
 </body> 
 </html>
