--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id='quote'>
             <h2>“Don't find customers for your products, find products for your customers.”</h2>
             <p>-Seth Godin</p>
-            <button id='button' type="button" onclick=''>Sign Up</button>
+            <a href="https://african-marketplace-three.now.sh/"><button id='button' type="button" onclick=''>Login</button></a>
         </div>
     </section>
 </body> 
