--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
                 <a href='https://www.linkedin.com/in/william-ryan-34a1981a1/'><img src='img/William.jpg'></a>
             </div> 
             <div class='portraits'>
-                <a href='https://www.linkedin.com/in/lucasgreenwell/'></a><img src='img/lucas.jpg'>
+                <a href='https://www.linkedin.com/in/lucasgreenwell/'><img src='img/lucas.jpg'></a>
             </div>
             <div class='portraits'>
-                <a href='https://www.linkedin.com/in/william-ryan-34a1981a1/'></a><img src='img/Niko.jpg'></a>
+                <a href='https://www.linkedin.com/in/william-ryan-34a1981a1/'><img src='img/Niko.jpg'></a>
             </div>
             <div class='portraits'>
                 <img src='img/ESZCHB482-W012JQ3GX2P-67d1a47e091d-512.jpg'>
